# H2C

./: .gitignore  ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  Test.md  h2c_report.md  index.html  llms-full.txt  llms.txt  pyproject.toml
archive/: test-sonnet-4.6-v1.1.md
claude/: README.md  settings.local.json
deepseek-v4-pro/: REPORT.md  test2-calculator.h2c
docs/: README.md
docs/agent-runtime/: protocol.md
docs/architecture/: agent-runtime.md  context-lifecycle.md  overview.md
docs/benchmarks/: comparison.md
docs/comparisons/: vs-alternatives.md
docs/compiler/: pipeline.md
docs/content-strategy/: titles.md
docs/ecosystem/: integrations.md
docs/parser/: architecture.md  schema.md
docs/positioning/: README.md
docs/risks/: analysis.md
docs/semantic-ir/: model.md
docs/seo/: keyword-strategy.md
docs/specification/: blocks.md  grammar.md  semantics.md
examples/: api-meteo.md  prune_demo.md  todo-console.md
h2c/: __init__.py  __main__.py
h2c/cli/: main.py
h2c/context/: __init__.py  manager.py  rules.py
h2c/parser/: __init__.py  ast.py  errors.py  parser.py
h2c/runtime/: __init__.py  agent.py  dispatcher.py  transport.py
h2c/state/: __init__.py  fsm.py  memory.py  (+1 more)
h2c_compress/: SKILL.md
opus4_7/: REPORT.md  test1-hello-world.h2c  test2-calculator.h2c  test3-clean-arch.h2c  test4-rag-pipeline.h2c  test5-stress-130msg.h2c
skills/: h2c_architect.md  h2c_builder.md  h2c_orchestrator.md  h2c_tester.md
tests/: conftest.py  test_integration.py  test_parser.py  test_tokenizer.py  test_validator.py
(+18 files in other folders)
