[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "h2c"
version = "0.1.0"
description = "H2C Semantic Compression Protocol — Runtime, parser, validator, and agent runtime"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Paolino Salamone"}]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/LuPaLa-Coder/H2C"

[project.scripts]
h2c = "h2c.cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]
yaml = ["pyyaml"]

[tool.setuptools.packages.find]
include = ["h2c*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
